--- a/style.css
+++ b/style.css
@@ -136,7 +136,12 @@ li:nth-child(4) > a {
 }
 
 .adress {
-  margin: 20px 0;
+  margin: 25px 0;
+  color: grey;
+}
+
+.adress div:nth-child(1) {
+	margin-bottom:10px;
 }
 
 .select:not([multiple]) {
@@ -155,7 +160,7 @@ input[type="text"],
 select {
   background-color: #f7f7f7;
   border: 1px solid #e9e9e9;
-  padding: 10px;
+  padding: 15px 10px;
   color: #979797;
   cursor: pointer;
   width: 100%;
@@ -164,7 +169,7 @@ select {
 input[type="date"] {
   background-color: #f7f7f7;
   border: 1px solid #e9e9e9;
-  padding: 8px;
+  padding: 13px 10px;
   color: #979797;
   cursor: pointer;
   font-family: inherit;
@@ -196,8 +201,11 @@ input[type="file"]:before {
 }
 input[type="file"] {
   color: #c6c6c6;
-  width: 100%;
+  width: 33%;
+  visibility: hidden;
 }
+
+.grey {color: #c6c6c6; font-size:14px;}
 
 .datetime {
   position: relative;
@@ -281,7 +289,7 @@ input[type="submit"] {
   background-color: #e20074;
   border: none;
   cursor: pointer;
-  padding: 18px 40px;
+  padding: 18px 60px;
 }
 .button {
   text-align: right;
@@ -346,6 +354,10 @@ input[type="submit"] {
   input[type="submit"] {
     width: 100%;
   }
+  
+  input[type="file"] {
+	  width: 48%;
+}
 }
 
 @media (min-width: 781px) {
