--- a/style.css
+++ b/style.css
@@ -3,116 +3,104 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0 auto;
   box-sizing: border-box;
+    
 }
 
-.block {
-  background-color: #f7f7f7;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
 .block h2 {
-  text-align: center;
-  font-size: 24px;
-  font-weight: 500;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
 }
 
 .block_one {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .pic {
-  margin: 0 20px;
+    margin: 0 20px;
 }
 
 .text {
-  font-size: 21px;
-  margin: 0 20px;
+    font-size: 21px;
+    margin: 0 20px;
 }
 
+.text_one {margin-bottom: 20px;}
+
 .bold {
-  font-weight: 500;
+    font-weight: 500;
 }
 
 .picture {
-  position: relative;
+    position: relative;
 }
 
-.active:nth-child(2) > a {
-  background-image: url("img/two.png");
+.circle_one a {
+    position: absolute;
+    left: 78%;
+    top: 47%;
+    background-image: url("img/Ellipse52.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 60px;
+    height: 60px;
+    display: block;
 }
 
-.active:nth-child(3) > a {
-  background-image: url("img/one.png");
+.circle_two a {
+    left: 38%;
+    top: 62%;
+    position: absolute;
+    background-image: url("img/Ellipse52.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 60px;
+    height: 60px;
+    display: block;
 }
 
-.active:nth-child(4) > a {
-  background-image: url("img/three.png");
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-li:nth-child(2) > a {
-  position: absolute;
-  left: 78%;
-  top: 47%;
-  background-image: url("img/Ellipse52.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  width: 60px;
-  height: 60px;
-  display: block;
-}
-
-li:nth-child(3) > a {
-  left: 38%;
-  top: 62%;
-  position: absolute;
-  background-image: url("img/Ellipse52.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  width: 60px;
-  height: 60px;
-  display: block;
-}
-
-li:nth-child(4) > a {
-  left: 14%;
-  bottom: 6%;
-  position: absolute;
-  background-image: url("img/Ellipse52.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  width: 60px;
-  height: 60px;
-  display: block;
-}
-
-.circle_one a:hover {
-  background-image: url("img/two.png");
-}
-
-.circle_two a:hover {
-  background-image: url("img/one.png");
-}
-
-.circle_three a:hover {
-  background-image: url("img/three.png");
+.circle_three a {
+    left: 14%;
+    bottom: 6%;
+    position: absolute;
+    background-image: url("img/Ellipse52.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 60px;
+    height: 60px;
+    display: block;
 }
 
 .to-be-changed {
-  color: inherit;
+    color: inherit;
 }
 
+.to-be-changed a {text-decoration:none; color:inherit;}
+
 .to-be-changed:target {
-  color: #dc45a6;
+    color: #dc45a6;
 }
+
+#text1, #text2, #text3 {
+pointer-events: none!important;
+cursor: default!important;}
+
+a:focus ~ p {color: #dc45a6;}
+
+
+
+
 
 .block-second {
   margin: 20px auto;
@@ -188,7 +176,7 @@ input[type="file"]::file-selector-button {
 }
 input[type="file"]:before {
   content: "Прикрепить файл";
-  padding: 5px;
+  padding: 10px;
   display: inline-block;
   border: 1px solid #e20074;
   background-color: #fff;
@@ -201,7 +189,7 @@ input[type="file"]:before {
 }
 input[type="file"] {
   color: #c6c6c6;
-  width: 33%;
+  width: 40%;
   visibility: hidden;
 }
 
@@ -217,7 +205,7 @@ input[type="file"] {
   opacity: 0;
   cursor: pointer;
 }
-input[type="date"]::after {
+input#tbDate::after {
   content: " ";
   height: 5px;
   width: 5px;
@@ -228,6 +216,20 @@ input[type="date"]::after {
   cursor: pointer;
   position: absolute;
   display: block;
+}
+
+input#tbDate[type="text"] {background-image: url("img/arrow2.png");
+background-repeat:no-repeat;
+background-position:right 1% bottom 50%;;
+background-size: 10px;
+}
+
+.ui-datepicker-trigger {
+	    position: absolute;
+    top: 16px;
+    right: 0;
+    z-index: 10;
+	cursor:pointer;
 }
 
 .checkbox-text {
@@ -356,7 +358,11 @@ input[type="submit"] {
   }
   
   input[type="file"] {
-	  width: 48%;
+	  width: 55%;
+}
+
+.datetime {
+	margin-bottom:17px;
 }
 }
 
